Working on site

--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
 
   <body>
 
+    <!-- Hero area -->
     <div class="jumbotron jumbotron-fluid hero-area">
-      <div class="container">
-        <h1 class="display-3">Fluid jumbotron</h1>
-        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+      <h1 class="display-3 hero-text">Logan Glantz</h1>
+      <h1 class="display-4 hero-text">UX Designer</h1>
+      <p class="lead hero-text">loganglantz@gmail.com</p>
+      <p class="lead hero-text"> 509-521-8518</p>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col align-self-center test">
+          One of three columns
+        </div>
       </div>
     </div>
 
