--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Contact me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#contact">My resume</a>
+              <a class="nav-link js-scroll-trigger" href="#contact">Resume</a>
             </li>
           </ul>
         </div>
@@ -68,7 +68,7 @@
           </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5">Like clean UIs, simple content, and learning from your users? Me too.</p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">See my work</a>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#myWork">See my work</a>
           </div>
         </div>
       </div>
